# pqf

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  drift-history.json  initial_feedback.md  pyproject.toml
.github/workflows/: ci.yml  compute-metrics.yml  deploy-pages.yml
.playwright-mcp/: page-2026-06-30T18-17-36-752Z.yml
computed/: discourse.json  indico.json  jenkins.json  landscape.json  livepatch.json  matrix.json  mattermost.json  netbox.json  wazuh.json  wordpress-k8s.json
config/: dimensions.yaml
config/schemas/: dimensions.schema.json  product.schema.json
docs/: README.md  adding-a-dimension.md  adding-a-product.md  architecture.md
docs/views/: dimension-detail.md  overview.md  product-detail.md
engine/: __main__.py  assemble.py  badges.py  drift_tracker.py  medal_engine.py  merge_computed.py  models.py  rubric.py  validate.py
engine/__tests__/: test_assemble.py  test_badges.py  test_drift_tracker.py  test_integration.py  test_medal_engine.py  test_models.py  test_rubric.py  test_validate.py
products/: discourse.yaml  indico.yaml  jenkins.yaml  landscape.yaml  livepatch.yaml  matrix.yaml  mattermost.yaml  netbox.yaml  wazuh.yaml  wordpress-k8s.yaml
public/: portfolio.json
scorers/documentation/: logic.py  scorer.py
scorers/security_ssdlc/: logic.py  scorer.py
scorers/substrate_compat/: logic.py  scorer.py
scorers/support_engagement/: logic.py  scorer.py
ui/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
ui/src/: App.tsx  (+3 more)
(+35 files in other folders)
