[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pqf-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "requests>=2.32",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "responses>=0.25",
    "ruff>=0.9",
    "jsonschema>=4.23",
]

[tool.setuptools.packages]
find = {where = ["."], include = ["engine", "scorers*"]}

[tool.pytest.ini_options]
testpaths = ["engine/__tests__", "scorers"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
